--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/assets/index.e3a6ccde.js"></script>
-    <link rel="stylesheet" href="/assets/index.760a4f80.css">
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
+    <script type="module" crossorigin src="/assets/index.e82cf2fe.js"></script>
+    <link rel="stylesheet" href="/assets/index.3264d4fb.css">
   </head>
   <body>
     <div id="root" style="width:100%;height:100%" ></div>
